fix overflowing committee cards

--- a/content/public/styles/committee_card.css
+++ b/content/public/styles/committee_card.css
@@ -3,7 +3,7 @@
     list-style-type: none;
     display: grid;
     padding: 0px;
-    grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
     grid-auto-rows: max(15rem, min-content);
     gap: 24px;
 }
